--- a/__SkillsShowcaseWebsite/CodingProjects/CodingProjectsLandingPage.html
+++ b/__SkillsShowcaseWebsite/CodingProjects/CodingProjectsLandingPage.html
@@ -165,10 +165,56 @@ body {
 </div>
 </body>
 
+
+
+<!--https://www.w3schools.com/cssref/tryit.asp?filename=trycss_background-attachment_fixed-->
 <body>
+  <style> 
+    .fixed-bg {
+      background-image: url("pythonLogo.png");
+      min-height: 500px;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-color: #333;
+    }
+    </style>
   <table>
     <a href="hangman">Hangman</a>
     <a href="3.3.1 Class Helper">3.3.1 Class Helper</a>
   </table>
+</body>
+
+
+<body>
+  <style>
+    .fixed-bg {
+      background-image: url("javaLogo.png");
+      min-height: 500px;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-color: #333;
+    }
+  </style>
+
+</body>
+
+
+<body>
+  <style>
+    .fixed-bg {
+      background-image: url("htmlLogo.png");
+      min-height: 500px;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-color: #333;
+    }
+  </style>
+
 </body>
 
