--- a/__SkillsShowcaseWebsite/IndependentProjectV2.0/HTMLSection.html
+++ b/__SkillsShowcaseWebsite/IndependentProjectV2.0/HTMLSection.html
@@ -8,10 +8,12 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/livs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/particles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Degeneracy Incorporated</title>
+  <title>HTML Project</title>
+  <meta name="description" content="Online JavaScript Compiler">
 </head>
 
 <body>
@@ -174,11 +176,41 @@
     <div class="centeredTop child">
       <div class="containerBigTop">
         <div class="row">
-          <h1>asjd;gklagj</h1>
+          <h1>First HTML Project</h1>
           <div class="container">
             <card>
-              <header>Purpose</header>
-              <p>This website showcases some of my coding projects I have worked on while in Mr.Bander's class.</p>
+                <div class="row container">
+                    <header>Junior Year HTML Final</header>
+                </div>
+              <p>This project was our combination of our first two HTML projects into one website</p>
+              <!--https://www.youtube.com/watch?v=i2Dw5fSKzWk&t=11s-->
+              <div class="editor-menu">
+                <button class="btn btn-run"><i class="fa fa-play"></i>Run</button>
+                <div class="live">
+                    <label for="live">Live </label>
+                    <input type="checkbox" id="live">
+                </div>
+              </div>
+
+              <div class="container">
+                <div class="left">
+
+
+                </div>
+
+                <div class="right">
+
+
+                </div>
+              </div>
+
+
+
+
+
+
+
+              <script src="script.js"></script>
             </card>
           </div>
         </div>
