--- a/__SkillsShowcaseWebsite/IndependentProjectV2.0/JavaSection.html
+++ b/__SkillsShowcaseWebsite/IndependentProjectV2.0/JavaSection.html
@@ -5,5 +5,5 @@
 4.) 
 
 -->
-
+<!--Add some small projects as well for time's sake (Like those UnitSection Question things from repl.it)-->
 <h1>Java Section</h1>
