--- a/__SkillsShowcaseWebsite/IndependentProjectV2.0/HTMLSection.html
+++ b/__SkillsShowcaseWebsite/IndependentProjectV2.0/HTMLSection.html
@@ -192,15 +192,20 @@
                 </div>
               </div>
 
-              <div class="container">
-                <div class="left">
+              <div class="container d-flex flex-row containerCode">
+                  
 
+                <div class="left">
+                    <div class="editor" contenteditable="">
+                        Write ya code here gamba-da-goolie I'm Italiano!
+                    </div>
 
                 </div>
+                    <!--18:53    https://www.youtube.com/watch?v=i2Dw5fSKzWk&t=11s-->
+                <div class="right ">
+                    <iframe src="" frameborder="4" class="iframe">
 
-                <div class="right">
-
-
+                    </iframe>
                 </div>
               </div>
 
