--- a/__SkillsShowcaseWebsite/IndependentProjectV2.0/PythonSection.html
+++ b/__SkillsShowcaseWebsite/IndependentProjectV2.0/PythonSection.html
@@ -183,14 +183,14 @@
     <div class="centeredTop child">
       <div class="containerBigTop">
         <div class="row">
-          <h1>First HTML Project</h1>
+          <h1>First Big Python Project</h1>
           <div class="container">
             <card>
                 <div class="row container">
-                    <header>Junior Year HTML Final</header>
+                    <header>311 Class Helper</header>
                 </div>
               <p>This project was our combination of our first two HTML projects into one website</p>
-              {% include trinket-open type="python" height="300" %}
+              {% include 311ClassHelperPython/main.py %}
 
               {% include trinket-close %}
 
