--- a/__SkillsShowcaseWebsite/IndependentProjectV2.0/HTMLSection.html
+++ b/__SkillsShowcaseWebsite/IndependentProjectV2.0/HTMLSection.html
@@ -28,21 +28,21 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>                        
             </button>
-            <a class="navbar-brand" href="#">Degeneracy Inc.</a>
+            <a class="navbar-brand" href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.bridgemi.com%2Fsites%2Fdefault%2Ffiles%2Fstyles%2Ffull_width_image%2Fpublic%2FPPT-Ohio-pic-4-26.jpg%3Fitok%3D98m1HnbT&imgrefurl=https%3A%2F%2Fwww.bridgemi.com%2Fmichigan-health-watch%2Fall-forgiven-ohio-thanks-covid-vaccine-sincerely-michigan&tbnid=bgoxqWc29qTPMM&vet=12ahUKEwjY5JDdncjwAhWRFqwKHR5sBpwQMygtegUIARDiAQ..i&docid=pMPFHWYe5BHi0M&w=1300&h=712&q=ohio&safe=strict&ved=2ahUKEwjY5JDdncjwAhWRFqwKHR5sBpwQMygtegUIARDiAQ">Degeneracy Inc.</a>
           </div>
           <div>
             <div class="collapse navbar-collapse" id="myNavbar">
               <ul class="nav navbar-nav">
-                <li><a href="#section1">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Coding Projects<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#section41">Java</a></li>
-                    <li><a href="#section42">Python</a></li>
-                    <li><a href="#section43">HTML</a></li>
+                    <li><a href="JavaSection.html">Java</a></li>
+                    <li><a href="PythonSection.html">Python</a></li>
+                    <li><a href="HTMLSection.html">HTML</a></li>
                   </ul>
                 </li>
-                <li><a href="#section2">About Me</a></li>
-                <li><a href="#section3">Credits</a></li>
+                <li><a href="AboutMe.html">About Me</a></li>
+
               </ul>
             </div>
           </div>
