--- a/__SkillsShowcaseWebsite/IndependentProjectV2.0/AboutMe.html
+++ b/__SkillsShowcaseWebsite/IndependentProjectV2.0/AboutMe.html
@@ -179,41 +179,20 @@
 
 
     <div class="centeredTop child">
-      <div class="containerBigTop">
+      <div class="containerBigTopA">
         <div class="row">
-          <h1>Coding Projects</h1>
+          <h1>About Me</h1>
           <div class="container col-lg-20">
             <card>
-              <header>Java</header>
-              <p>This website showcases some of my coding projects I have worked on while in Mr.Bander's class.</p>
-            </card>
-            <card>
-              <header>HTML</header>
-              <p>This website showcases some of my coding projects I have worked on while in Mr.Bander's class.</p>
+              <header>Info</header>
+              <p class="pl">Name: Zachary King</p>
+              <p class="pl">Email: zachary.king@evsck12.com</p>
+              <p class="pl">Github: <a class="btn btn-default" href="https://github.com/xX-ZacharyKing-Xx/SICTC-CS-Zach-King" role="button">To GitHub</a></p>
             </card>
           </div>
         </div>
       </div>
     </div>
     </div>
-
-
-
-
-
-
-
-
-  
 </body>
-
-
-
-
-
-
-
-
-
-
 </html>
