--- a/__SkillsShowcaseWebsite/IndependentProjectV2.0/AboutMe.html
+++ b/__SkillsShowcaseWebsite/IndependentProjectV2.0/AboutMe.html
@@ -185,6 +185,7 @@
           <div class="container col-lg-20">
             <card>
               <header>Info</header>
+              <img class="img-thumbnail" src="img/staticFace.gif" alt="">
               <p class="pl">Name: Zachary King</p>
               <p class="pl">Email: zachary.king@evsck12.com</p>
               <p class="pl">Github: <a class="btn btn-default" href="https://github.com/xX-ZacharyKing-Xx/SICTC-CS-Zach-King" role="button">To GitHub</a></p>
